Updated .gitnore file to remove .d files Updated drv_gpio to include new hardware defines. Updated some of the low level wifi code to support the new processor.

--- a/dataBoardMCU/dataBoardMCU/DebugOnHW/Makefile
+++ b/dataBoardMCU/dataBoardMCU/DebugOnHW/Makefile
@@ -162,6 +162,7 @@ C_SRCS +=  \
 ../src/ASF/sam/drivers/spi/spi.c \
 ../src/dat_dataManager.c \
 ../src/dbg_debugManager.c \
+../src/drv_led.c \
 ../src/net_wirelessNetwork.c \
 ../src/pkt_packetParser.c \
 ../src/protobuf-c.c \
@@ -239,6 +240,7 @@ src/ASF/sam/drivers/matrix/matrix.o \
 src/ASF/sam/drivers/spi/spi.o \
 src/dat_dataManager.o \
 src/dbg_debugManager.o \
+src/drv_led.o \
 src/net_wirelessNetwork.o \
 src/pkt_packetParser.o \
 src/protobuf-c.o \
@@ -309,6 +311,7 @@ src/ASF/sam/drivers/matrix/matrix.o \
 src/ASF/sam/drivers/spi/spi.o \
 src/dat_dataManager.o \
 src/dbg_debugManager.o \
+src/drv_led.o \
 src/net_wirelessNetwork.o \
 src/pkt_packetParser.o \
 src/protobuf-c.o \
@@ -379,6 +382,7 @@ src/ASF/sam/drivers/matrix/matrix.d \
 src/ASF/sam/drivers/spi/spi.d \
 src/dat_dataManager.d \
 src/dbg_debugManager.d \
+src/drv_led.d \
 src/net_wirelessNetwork.d \
 src/pkt_packetParser.d \
 src/protobuf-c.d \
@@ -449,6 +453,7 @@ src/ASF/sam/drivers/matrix/matrix.d \
 src/ASF/sam/drivers/spi/spi.d \
 src/dat_dataManager.d \
 src/dbg_debugManager.d \
+src/drv_led.d \
 src/net_wirelessNetwork.d \
 src/pkt_packetParser.d \
 src/protobuf-c.d \
@@ -512,6 +517,8 @@ LINKER_SCRIPT_DEP+=  \
 
 
 # AVR32/GNU C Compiler
+
+
 
 
 
