Added TFTP client manager Changed message type name to msgType to resolve conflicts.

--- a/dataBoardMCU/dataBoardMCU/DebugOnHW/Makefile
+++ b/dataBoardMCU/dataBoardMCU/DebugOnHW/Makefile
@@ -146,6 +146,7 @@ SUBDIRS :=  \
 
 # Add inputs and outputs from these tool invocations to the build variables 
 C_SRCS +=  \
+../src/tftp_fileTransferClient.c \
 ../src/ASF/common/components/wifi/winc1500/bsp/source/nm_bsp_sam4s.c \
 ../src/ASF/common/components/wifi/winc1500/bus_wrapper/source/nm_bus_wrapper_sam4s.c \
 ../src/ASF/common/components/wifi/winc1500/common/source/nm_common.c \
@@ -234,6 +235,7 @@ ASM_SRCS +=
 
 
 OBJS +=  \
+src/tftp_fileTransferClient.o \
 src/ASF/common/components/wifi/winc1500/bsp/source/nm_bsp_sam4s.o \
 src/ASF/common/components/wifi/winc1500/bus_wrapper/source/nm_bus_wrapper_sam4s.o \
 src/ASF/common/components/wifi/winc1500/common/source/nm_common.o \
@@ -315,6 +317,7 @@ src/ASF/thirdparty/fatfs/fatfs-r0.09/src/ff.o \
 src/main.o
 
 OBJS_AS_ARGS +=  \
+src/tftp_fileTransferClient.o \
 src/ASF/common/components/wifi/winc1500/bsp/source/nm_bsp_sam4s.o \
 src/ASF/common/components/wifi/winc1500/bus_wrapper/source/nm_bus_wrapper_sam4s.o \
 src/ASF/common/components/wifi/winc1500/common/source/nm_common.o \
@@ -396,6 +399,7 @@ src/ASF/thirdparty/fatfs/fatfs-r0.09/src/ff.o \
 src/main.o
 
 C_DEPS +=  \
+src/tftp_fileTransferClient.d \
 src/ASF/common/components/wifi/winc1500/bsp/source/nm_bsp_sam4s.d \
 src/ASF/common/components/wifi/winc1500/bus_wrapper/source/nm_bus_wrapper_sam4s.d \
 src/ASF/common/components/wifi/winc1500/common/source/nm_common.d \
@@ -477,6 +481,7 @@ src/ASF/thirdparty/fatfs/fatfs-r0.09/src/ff.d \
 src/main.d
 
 C_DEPS_AS_ARGS +=  \
+src/tftp_fileTransferClient.d \
 src/ASF/common/components/wifi/winc1500/bsp/source/nm_bsp_sam4s.d \
 src/ASF/common/components/wifi/winc1500/bus_wrapper/source/nm_bus_wrapper_sam4s.d \
 src/ASF/common/components/wifi/winc1500/common/source/nm_common.d \
@@ -731,6 +736,15 @@ LINKER_SCRIPT_DEP+=  \
 
 
 
+
+
+src/%.o: ../src/%.c
+	@echo Building file: $<
+	@echo Invoking: ARM/GNU C Compiler : 5.3.1
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\arm\arm-gnu-toolchain\bin\arm-none-eabi-gcc.exe$(QUOTE)  -x c -mthumb -D__SAM4SA16B__ -DDEBUG -D__FREERTOS__ -DBOARD=SAM4S_XPLAINED_PRO -D__SAM4S16B__ -Dprintf=iprintf -Dscanf=iscanf -DARM_MATH_CM4=true  -I"../common/applications/xplained_pro_user_application/sam4sd32c_sam4s_xplained_pro/config" -I"../src/config" -I"../src/ASF/thirdparty/CMSIS/Lib/GCC" -I"../src/ASF/sam/utils/cmsis/sam4s/include" -I"../src/ASF/common/utils" -I"../src" -I"../src/ASF/common/services/clock" -I"../src/ASF/sam/drivers/pmc" -I"../src/ASF/sam/boards/sam4s_xplained_pro" -I"../src/ASF/sam/utils" -I"../src/ASF/sam/utils/preprocessor" -I"../src/ASF/sam/boards" -I"../src/ASF/common/boards" -I"../src/ASF/common/services/gpio" -I"../src/ASF/sam/drivers/pio" -I"../src/ASF/sam/utils/header_files" -I"../src/ASF/common/services/ioport" -I"../src/ASF/sam/drivers/wdt" -I"../src/ASF/thirdparty/CMSIS/Include" -I"../src/ASF/common/services/storage/ctrl_access" -I"../src/ASF/sam/drivers/rtc" -I"../src/ASF/sam/drivers/uart" -I"../src/ASF/thirdparty/fatfs/fatfs-r0.09/src" -I"../src/ASF/common/services/delay" -I"../src/ASF/common/services/serial/sam_uart" -I"../src/ASF/common/services/serial" -I"../src/ASF/sam/drivers/usart" -I"../src/ASF/thirdparty/fatfs/fatfs-port-r0.09/sam" -I"../src/ASF/thirdparty/freertos/freertos-7.3.0/source/include" -I"../src/ASF/thirdparty/freertos/freertos-7.3.0/source/portable/gcc/sam" -I"../src/ASF/common/utils/membag" -I"../src/ASF/sam/drivers/pdc" -I"../src/ASF/sam/drivers/pdc/pdc_uart_example" -I"../src/ASF/sam/drivers/rstc" -I"../src/ASF/common/components/memory/sd_mmc" -I"../src/ASF/common/utils/stdio/stdio_serial" -I"../src/ASF/sam/drivers/hsmci" -I"../src/ASF/sam/utils/cmsis/sam4s/source/templates" -I"../src/ASF/sam/drivers/rstc/example1" -I"../src/ASF/common/components/wifi/winc1500" -I"../src/ASF/sam/drivers/spi" -I"../src/ASF/sam/drivers/matrix" -I"../src/ASF/sam/drivers/tc" -I"../src/ASF/sam/drivers/efc" -I"../src/ASF/sam/services/flash_efc"  -O0 -fdata-sections -ffunction-sections -mlong-calls -g3 -Wall -mcpu=cortex-m4 -c -pipe -fno-strict-aliasing -Wall -Wstrict-prototypes -Wmissing-prototypes -Werror-implicit-function-declaration -Wpointer-arith -std=gnu99 -ffunction-sections -fdata-sections -Wchar-subscripts -Wcomment -Wformat=2 -Wimplicit-int -Wmain -Wparentheses -Wsequence-point -Wreturn-type -Wswitch -Wtrigraphs -Wunused -Wuninitialized -Wunknown-pragmas -Wfloat-equal -Wundef -Wshadow -Wbad-function-cast -Wwrite-strings -Wsign-compare -Waggregate-return  -Wmissing-declarations -Wformat -Wmissing-format-attribute -Wno-deprecated-declarations -Wpacked -Wredundant-decls -Wnested-externs -Wlong-long -Wunreachable-code -Wcast-align --param max-inline-insns-single=500 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
 src/ASF/common/components/wifi/winc1500/bsp/source/%.o: ../src/ASF/common/components/wifi/winc1500/bsp/source/%.c
 	@echo Building file: $<
 	@echo Invoking: ARM/GNU C Compiler : 5.3.1
@@ -802,13 +816,6 @@ src/ASF/sam/drivers/tc/%.o: ../src/ASF/sam/drivers/tc/%.c
 	
 
 src/ASF/sam/services/flash_efc/%.o: ../src/ASF/sam/services/flash_efc/%.c
-	@echo Building file: $<
-	@echo Invoking: ARM/GNU C Compiler : 5.3.1
-	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\arm\arm-gnu-toolchain\bin\arm-none-eabi-gcc.exe$(QUOTE)  -x c -mthumb -D__SAM4SA16B__ -DDEBUG -D__FREERTOS__ -DBOARD=SAM4S_XPLAINED_PRO -D__SAM4S16B__ -Dprintf=iprintf -Dscanf=iscanf -DARM_MATH_CM4=true  -I"../common/applications/xplained_pro_user_application/sam4sd32c_sam4s_xplained_pro/config" -I"../src/config" -I"../src/ASF/thirdparty/CMSIS/Lib/GCC" -I"../src/ASF/sam/utils/cmsis/sam4s/include" -I"../src/ASF/common/utils" -I"../src" -I"../src/ASF/common/services/clock" -I"../src/ASF/sam/drivers/pmc" -I"../src/ASF/sam/boards/sam4s_xplained_pro" -I"../src/ASF/sam/utils" -I"../src/ASF/sam/utils/preprocessor" -I"../src/ASF/sam/boards" -I"../src/ASF/common/boards" -I"../src/ASF/common/services/gpio" -I"../src/ASF/sam/drivers/pio" -I"../src/ASF/sam/utils/header_files" -I"../src/ASF/common/services/ioport" -I"../src/ASF/sam/drivers/wdt" -I"../src/ASF/thirdparty/CMSIS/Include" -I"../src/ASF/common/services/storage/ctrl_access" -I"../src/ASF/sam/drivers/rtc" -I"../src/ASF/sam/drivers/uart" -I"../src/ASF/thirdparty/fatfs/fatfs-r0.09/src" -I"../src/ASF/common/services/delay" -I"../src/ASF/common/services/serial/sam_uart" -I"../src/ASF/common/services/serial" -I"../src/ASF/sam/drivers/usart" -I"../src/ASF/thirdparty/fatfs/fatfs-port-r0.09/sam" -I"../src/ASF/thirdparty/freertos/freertos-7.3.0/source/include" -I"../src/ASF/thirdparty/freertos/freertos-7.3.0/source/portable/gcc/sam" -I"../src/ASF/common/utils/membag" -I"../src/ASF/sam/drivers/pdc" -I"../src/ASF/sam/drivers/pdc/pdc_uart_example" -I"../src/ASF/sam/drivers/rstc" -I"../src/ASF/common/components/memory/sd_mmc" -I"../src/ASF/common/utils/stdio/stdio_serial" -I"../src/ASF/sam/drivers/hsmci" -I"../src/ASF/sam/utils/cmsis/sam4s/source/templates" -I"../src/ASF/sam/drivers/rstc/example1" -I"../src/ASF/common/components/wifi/winc1500" -I"../src/ASF/sam/drivers/spi" -I"../src/ASF/sam/drivers/matrix" -I"../src/ASF/sam/drivers/tc" -I"../src/ASF/sam/drivers/efc" -I"../src/ASF/sam/services/flash_efc"  -O0 -fdata-sections -ffunction-sections -mlong-calls -g3 -Wall -mcpu=cortex-m4 -c -pipe -fno-strict-aliasing -Wall -Wstrict-prototypes -Wmissing-prototypes -Werror-implicit-function-declaration -Wpointer-arith -std=gnu99 -ffunction-sections -fdata-sections -Wchar-subscripts -Wcomment -Wformat=2 -Wimplicit-int -Wmain -Wparentheses -Wsequence-point -Wreturn-type -Wswitch -Wtrigraphs -Wunused -Wuninitialized -Wunknown-pragmas -Wfloat-equal -Wundef -Wshadow -Wbad-function-cast -Wwrite-strings -Wsign-compare -Waggregate-return  -Wmissing-declarations -Wformat -Wmissing-format-attribute -Wno-deprecated-declarations -Wpacked -Wredundant-decls -Wnested-externs -Wlong-long -Wunreachable-code -Wcast-align --param max-inline-insns-single=500 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
-	@echo Finished building: $<
-	
-
-src/%.o: ../src/%.c
 	@echo Building file: $<
 	@echo Invoking: ARM/GNU C Compiler : 5.3.1
 	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\arm\arm-gnu-toolchain\bin\arm-none-eabi-gcc.exe$(QUOTE)  -x c -mthumb -D__SAM4SA16B__ -DDEBUG -D__FREERTOS__ -DBOARD=SAM4S_XPLAINED_PRO -D__SAM4S16B__ -Dprintf=iprintf -Dscanf=iscanf -DARM_MATH_CM4=true  -I"../common/applications/xplained_pro_user_application/sam4sd32c_sam4s_xplained_pro/config" -I"../src/config" -I"../src/ASF/thirdparty/CMSIS/Lib/GCC" -I"../src/ASF/sam/utils/cmsis/sam4s/include" -I"../src/ASF/common/utils" -I"../src" -I"../src/ASF/common/services/clock" -I"../src/ASF/sam/drivers/pmc" -I"../src/ASF/sam/boards/sam4s_xplained_pro" -I"../src/ASF/sam/utils" -I"../src/ASF/sam/utils/preprocessor" -I"../src/ASF/sam/boards" -I"../src/ASF/common/boards" -I"../src/ASF/common/services/gpio" -I"../src/ASF/sam/drivers/pio" -I"../src/ASF/sam/utils/header_files" -I"../src/ASF/common/services/ioport" -I"../src/ASF/sam/drivers/wdt" -I"../src/ASF/thirdparty/CMSIS/Include" -I"../src/ASF/common/services/storage/ctrl_access" -I"../src/ASF/sam/drivers/rtc" -I"../src/ASF/sam/drivers/uart" -I"../src/ASF/thirdparty/fatfs/fatfs-r0.09/src" -I"../src/ASF/common/services/delay" -I"../src/ASF/common/services/serial/sam_uart" -I"../src/ASF/common/services/serial" -I"../src/ASF/sam/drivers/usart" -I"../src/ASF/thirdparty/fatfs/fatfs-port-r0.09/sam" -I"../src/ASF/thirdparty/freertos/freertos-7.3.0/source/include" -I"../src/ASF/thirdparty/freertos/freertos-7.3.0/source/portable/gcc/sam" -I"../src/ASF/common/utils/membag" -I"../src/ASF/sam/drivers/pdc" -I"../src/ASF/sam/drivers/pdc/pdc_uart_example" -I"../src/ASF/sam/drivers/rstc" -I"../src/ASF/common/components/memory/sd_mmc" -I"../src/ASF/common/utils/stdio/stdio_serial" -I"../src/ASF/sam/drivers/hsmci" -I"../src/ASF/sam/utils/cmsis/sam4s/source/templates" -I"../src/ASF/sam/drivers/rstc/example1" -I"../src/ASF/common/components/wifi/winc1500" -I"../src/ASF/sam/drivers/spi" -I"../src/ASF/sam/drivers/matrix" -I"../src/ASF/sam/drivers/tc" -I"../src/ASF/sam/drivers/efc" -I"../src/ASF/sam/services/flash_efc"  -O0 -fdata-sections -ffunction-sections -mlong-calls -g3 -Wall -mcpu=cortex-m4 -c -pipe -fno-strict-aliasing -Wall -Wstrict-prototypes -Wmissing-prototypes -Werror-implicit-function-declaration -Wpointer-arith -std=gnu99 -ffunction-sections -fdata-sections -Wchar-subscripts -Wcomment -Wformat=2 -Wimplicit-int -Wmain -Wparentheses -Wsequence-point -Wreturn-type -Wswitch -Wtrigraphs -Wunused -Wuninitialized -Wunknown-pragmas -Wfloat-equal -Wundef -Wshadow -Wbad-function-cast -Wwrite-strings -Wsign-compare -Waggregate-return  -Wmissing-declarations -Wformat -Wmissing-format-attribute -Wno-deprecated-declarations -Wpacked -Wredundant-decls -Wnested-externs -Wlong-long -Wunreachable-code -Wcast-align --param max-inline-insns-single=500 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
